--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@
             </div>
             <div class="tab-content row" id="pills-tabContent">
                 <div class="tab-pane col-12 fade show active " id="pills-All" role="tabpanel" aria-labelledby="pills-All-tab"tabindex="0">
-                    <div class="Each-Panel d-flex gy-4 row align-items-stretch row-cols-md-3 row-cols-1 row-cols-sm-2">
+                    <div class="Each-Panel d-flex gy-4 row row-cols-md-3 row-cols-1 row-cols-sm-2">
                         <div class="col">
-                            <div class="Each-Port h-100 position-relative d-flex justify-content-center">
-                                <div class="Each-Port-img h-100">
+                            <div class="Each-Port position-relative d-flex justify-content-center">
+                                <div class="Each-Port-img">
                                     <img src="images/work-1.jpg" class="img-fluid" alt="Work-1">
                                 </div>
                                 <div class="Each-Port-Layout d-flex align-items-center justify-content-between">
