--- a/index.html
+++ b/index.html
@@ -1091,22 +1091,11 @@
                     </div>
                 </div>
                 <div class="carousel-indicators position-static">
-                    <span type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></span>
-                    <span type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></span>
-                    <span class="material-symbols-outlined" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3">
-                        " circle "
-                    </span>
-                    <span class="material-symbols-outlined" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                        aria-label="Slide 4">
-                        " circle "
-                    </span>
-                    <span class="material-symbols-outlined" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                        aria-label="Slide 5">
-                        " circle "
-                    </span>
+                    <span class="active"  data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" aria-label="Slide 1"></span>
+                    <span data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></span>
+                    <span data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></span>
+                    <span data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 4"></span>
+                    <span data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></span>
                 </div>
             </div>
         </div>
